# GlacierNET-KZ

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  README.en.md  README.md  SECURITY.md  docker-compose.yml  download_drive.py  drive_file_list.json  predict.py  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: dependabot.yml  pull_request_template.md
competition/: GENIUS_OLYMPIAD.md  ISEF_POSTER.md  ISEF_PRESENTATION.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  BEGINNER_GUIDE.md  CONTRIBUTING.md  DATA_CITATION.md  DECISIONS.md  DEMO_WALKTHROUGH.md  GITHUB_ISSUES.md  GRANT_READINESS_MAX_PLAN.md  IMPROVEMENT_PLAN_2026-06-28.md  PROJECT_FULL_REFERENCE.md  PROJECT_READINESS_PLAN.md  README.md  RELEASE_PACKAGE.md  REPRODUCIBILITY.md  STAKEHOLDER_OUTREACH_PACK.md  UNIFIED_STACK.md  checklist.md  contacts_and_partnerships.md  literature_review.md  stakeholder_outreach_tracker.csv  wgms_validation.md
experimental/: README.md
experimental/glacierkz-c/: CMakeLists.txt
experimental/glacierkz-c/include/: glacierkz_args.h  glacierkz_checksum.h  glacierkz_endian.h  glacierkz_log.h  glacierkz_memory.h  glacierkz_raster.h  glacierkz_thread.h  glacierkz_tiff.h  glacierkz_tile.h
experimental/glacierkz-c/src/: glacierkz_args.c  glacierkz_checksum.c  glacierkz_endian.c  glacierkz_log.c  glacierkz_memory.c  glacierkz_raster.c  glacierkz_thread.c  glacierkz_tiff.c  glacierkz_tile.c
experimental/glacierkz-c/src/cli/: gzcat.c  gzinfo.c  gztile.c  gzverify.c
experimental/glacierkz-c/tests/: test_args.c  test_checksum.c  test_memory.c  test_raster.c  test_thread.c  test_tiff.c
experimental/glacierkz-native/: CMakeLists.txt  vcpkg.json
experimental/glacierkz-native/bindings/: pybind_glacierkz.cpp
experimental/glacierkz-native/include/glacierkz/: band_math.hpp  cuda_kernels.cuh  raster_io.hpp  resampling.hpp  simd_ops.hpp  sliding_window.hpp  spectral_indices.hpp  statistics.hpp  thread_pool.hpp  tile_cache.hpp
experimental/glacierkz-native/src/: band_math.cpp  raster_io.cpp  resampling.cpp  simd_ops.cpp  sliding_window.cpp  spectral_indices.cpp  statistics.cpp  thread_pool.cpp  tile_cache.cpp
experimental/glacierkz-native/tests/: CMakeLists.txt  test_resampling.cpp  test_simd_ops.cpp  test_statistics.cpp  test_thread_pool.cpp  test_tile_cache.cpp
gateway/: Caddyfile  Caddyfile.native
glacierkz-api/: .dockerignore  .env.example  Dockerfile  Dockerfile.full  requirements-api.txt  run.sh  seed_db.py
glacierkz-mcp/: README.md  requirements.txt  server.py
glacierkz-web/: .dockerignore  .env.example  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
notebooks/: 01_data_download.ipynb  01_data_download_executed.ipynb  02_preprocessing.ipynb  03_baseline_models.ipynb  04_unet_training.ipynb  05_temporal_analysis.ipynb  06_visualization.ipynb  README.md  _generate_notebooks.py  _synthetic_smoke_test.py  _unet_smoke_test.py
paper/: draft_outline.md  methodology.md  results_template.md
plans/: MASTER_PLAN.md
results/: data_inventory.json  data_quality_report.json  decision_readiness_summary.json  grant_readiness_summary.json  pipeline_status.json  temporal_benchmark_unet_sentinel2_terrain_2016_2024.json  wgms_validation_report.json
scripts/: analyze_rf_feature_importance.py  batch_predict_all.py  build_ancillary_features.py  build_data_inventory.py  build_decision_readiness_tables.py  build_grant_package.py  build_grant_readiness_tables.py  build_ml_dataset_catalog.py  build_multimodal_patches.py  build_multiyear_patches.py  build_project_evidence_package.py  build_real_data_eda.py  build_year_holdout_manifest.py  build_year_masks.py  download_all_missing.py  download_sentinel1_from_drive.py  download_wgms.py  evaluate_all_models.py  evaluate_temporal_benchmark.py  export_sentinel1_ancillary.py  export_stac_catalog.py  generate_figures.py  pipeline_status.py  rebuild_areas_table.py  run_wgms_validation.py  start.sh  train_baselines.py  train_unet_plus_plus.py  validate-env.py  validate_ancillary_features.py  validate_data_coverage.py  validate_data_quality.py  validate_decision_readiness.py  validate_patch_manifest.py  validate_training_masks.py  verify_local_release_package.py  watch_and_process.py  wgms_setup.py
spaces/: Dockerfile  README.md  app.py  requirements.txt
src/: __init__.py  active_learning.py  anomaly.py  augmentation.py  benchmarking.py  callbacks.py  clustering.py  config.py  data_loader.py  datasets.py  diffusion_model.py  distributed_training.py  domain_adaptation.py  ensemble.py  evaluation.py  experiment_tracking.py  feature_engineering.py  federated_learning.py  graph_neural_network.py  hyperparameter_tuning.py  interpretability.py  losses.py  metrics.py  model_compression.py  models.py  multi_task_learning.py  neural_architecture_search.py  postprocessing.py  preprocessing.py  reporting.py  schedulers.py  segmentation_models.py  self_supervised.py  spectral.py  time_series.py  train.py  uncertainty.py  vision_transformer.py  visualization.py
tests/: conftest.py  test_ancillary_data.py  test_api_endpoints.py  test_area_service.py  test_batch_predict_scripts.py  test_benchmarking.py  test_compare_router.py  test_config_and_registry.py  test_config_validation.py  test_dashboard_pipeline.py  test_data_loader_export.py  test_datasets_router.py  test_decision_readiness.py  test_ensemble.py  test_experiment_tracking.py  test_export_router.py  test_history_router.py  test_hyperparameter_tuning.py  test_integration.py  test_llm_service.py  test_losses.py  test_metrics.py  test_model_availability.py  test_model_weights.py  test_models_registry.py  test_monitoring_router.py  test_patch_manifest.py  test_predict.py  test_preprocessing.py  test_project_analysis_scripts.py  test_release_package.py  test_segmentation_models.py  test_segmentation_router.py  test_spectral.py  test_stac_export.py  test_tasks_router.py  test_train_multiyear_loader.py  test_training_masks.py  (+6 more)
(+356 files in other folders)
