[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glaciernet-kz"
version = "0.2.0"
description = "Multi-language glacier monitoring platform for Kazakhstan"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Dulat Nurlanuly", email = "rinatamankos6@gmail.com"},
]
keywords = ["glacier", "remote-sensing", "deep-learning", "segmentation", "kazakhstan"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tensorflow>=2.12.0,<2.16.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "rasterio>=1.3.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "fiona>=1.9.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "pillow>=10.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100.0,<0.104.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "httpx>=0.24.0,<0.29.0",
    "websockets>=11.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[project.scripts]
glacierkz = "predict:main"

[project.urls]
Homepage = "https://github.com/nazkari86-lab/GlacierNET-KZ"
Documentation = "https://github.com/nazkari86-lab/GlacierNET-KZ/tree/main/docs"
Repository = "https://github.com/nazkari86-lab/GlacierNET-KZ"
Issues = "https://github.com/nazkari86-lab/GlacierNET-KZ/issues"
Changelog = "https://github.com/nazkari86-lab/GlacierNET-KZ/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src", "app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing --cov-fail-under=40"
asyncio_mode = "auto"
markers = [
    "experimental: Phase 10 scaffold modules — excluded from CI until production-ready",
    "integration: Requires external services or large data downloads",
]
